[project]
name = "learn-nessie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=17.0.0",
    "pyiceberg[hive,s3fs] @ git+https://github.com/guitcastro/iceberg-python.git@access_delegation",
]

[tool.uv]
dev-dependencies = [
    "pyarrow-stubs>=17.6",
]
package = false
